Configure for Android AppStudio

--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -219,6 +219,7 @@ jobs:
           NDK=$ANDROID_NDK ANDROID_HOME=$ANDROID_SDK_ROOT ./build-package.sh -I -a ${{ matrix.target_arch }} $packages
         elif [ -n "$packages" ]; then
           ./scripts/run-docker.sh ./build-package.sh -I -a ${{ matrix.target_arch }} $packages
+
         fi
 
     - name: Generate build artifacts
@@ -263,64 +264,30 @@ jobs:
         path: ./artifacts
 
   upload:
-    concurrency: ${{ github.workflow }}
-    permissions:
-      contents: read
-    if: github.event_name != 'pull_request' && github.ref != 'refs/heads/dev' && !startsWith(github.ref, 'refs/heads/dev/')
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
-    - name: Clone repository
-      uses: actions/checkout@v4
-    - name: Get *.deb files
+    - name: Check out repository
+      uses: actions/checkout@v3
+      with:
+        repository: DevAnDroidCoder/aas-deb-files
+        token: ${{ secrets.REPO_PUSH_TOKEN }}
+        path: debfiles
+    - name: Download deb files from build jobs
       uses: actions/download-artifact@v4
       with:
-        path: ./
-    - name: Upload to packages.termux.dev
-      env:
-        REPOSITORY_URL: https://packages.termux.dev/aptly-api
+        path: artifacts
+    - name: Extract deb files
       run: |
-        GITHUB_SHA=${{ github.sha }}
-        APTLY_API_AUTH=${{ secrets.APTLY_API_AUTH }}
-        GPG_PASSPHRASE=${{ secrets.GPG_PASSPHRASE }}
-
-        source scripts/aptly_api.sh
-
-        for archive in debs-*/debs-{aarch64,arm,i686,x86_64}-${{ github.sha }}.tar; do
-          tar xf "$archive"
+        mkdir -p debfiles
+        for archive in artifacts/debs-*/debs-{aarch64,arm,i686,x86_64}-${{ github.sha }}.tar; do
+          tar xf "$archive" -C debfiles
         done
-
-        for repo in $(jq --raw-output 'del(.pkg_format) | keys | .[]' repo.json); do
-          export REPOSITORY_NAME=$(jq --raw-output '.["'$repo'"].name' repo.json)
-          export REPOSITORY_DISTRIBUTION=$(jq --raw-output '.["'$repo'"].distribution' repo.json)
-
-          # Upload file to temporary directory.
-          uploaded_files=false
-          shopt -s nullglob
-
-          if [ -f debs/built_${REPOSITORY_NAME}_packages.txt ]; then
-            for filename in $(cat debs/built_${REPOSITORY_NAME}_packages.txt | sed -E 's/(..*)/debs\/\1_\*.deb debs\/\1-static_\*.deb/g'); do
-              if ! aptly_upload_file "$filename"; then
-                exit 1
-              fi
-
-              uploaded_files=true
-            done
-            shopt -u nullglob
-
-            # Publishing repository changes.
-            if [ "$uploaded_files" = "true" ]; then
-              if ! aptly_add_to_repo; then
-                exit 1
-              fi
-
-              # Usually temporary directory is deleted automatically, but in certain cases it is left.
-              aptly_delete_dir
-
-              # Final part to make changes appear in web root.
-              if ! aptly_publish_repo; then
-                exit 1
-              fi
-            fi
-          fi
-        done
+    - name: Commit and push
+      run: |
+        cd debfiles
+        git config --global user.name "DevAnDroidCoder"
+        git config --global user.email "96680248+DevAnDroidCoder@users.noreply.github.com"
+        git add .
+        git commit -m "feat: upload deb files for ${{ github.event.inputs.packages}}"
+        git push origin main -f
